系统配置初始化